# NPUsper

./: .gitignore  README.md
gpu/: .gitignore
gpu/whisper-ggml/: .gitignore  CMakeLists.txt  KEEP_LIST.md  README.md  whisper.cpp  whisper.h
gpu/whisper-ggml/adapter/: ggml-adapter.h
gpu/whisper-ggml/examples/ours_streaming/: CMakeLists.txt  ours_streaming.cpp
gpu/whisper-ggml/examples/simul_streaming/: CMakeLists.txt  simul_streaming.cpp
gpu/whisper-ggml/examples/simul_whisper/: CMakeLists.txt  simul_whisper.cpp
gpu/whisper-ggml/examples/whisper_streaming_cpp/: whisper_streaming_cpp.cpp
gpu/whisper-ggml/examples/whisper_streaming_cpp_optimized/: CMakeLists.txt  whisper_streaming_cpp_optimized.cpp
gpu/whisper-ggml/models/: .gitignore  README.md  download-coreml-model.sh  download-ggml-model.sh
npu/: .gitignore  KEEP_LIST.md  README.md  compile_decoder_1step_xplus.py  compile_decoder_nk_full.py  compile_decoder_unroll_k_xplus.py  compile_encoder_xplus.py  package_nk_full_deploy.py  patch_qai_hub_models.py  qairt_paths.py  requirements-compile.txt  requirements-xplus-runtime.txt  requirements.txt  whisper_npu_profile.py
npu/docs/: NPU_DEPLOYMENT_GUIDE.md
npu/qai_hub_models_patch/: model.diff  model_adaptation.diff
npu/qai_hub_models_patch/modified/: model.py  model_adaptation.py
npu/whisper-onnx/: build_ours_streaming_xplus.ps1  whisper_ort.cpp  whisper_ort.h
npu/whisper-onnx/examples/: CMakeLists.txt
npu/whisper-onnx/examples/ours_streaming/: CMakeLists.txt  ours_streaming.cpp  ours_streaming_per_word_latency.cpp
npu/whisper-onnx/examples/whisper_streaming/: whisper_streaming.cpp
npu/whisper-onnx/models/: diagnose_mel.py  export_whisper_onnx.py  verify_onnx.py
npu/whisper-onnx/models/base/: vocab.txt
scripts/: make_smoke_wav.py
whisper-ggml/: .gitignore  CMakeLists.txt  README.md  whisper.cpp  whisper.h
whisper-ggml-xplus/: .gitignore  CMakeLists.txt  KEEP_LIST.md  README.md  whisper.cpp
whisper-ggml-xplus/examples/: CMakeLists.txt
whisper-ggml-xplus/examples/ours_streaming/: ours_streaming.cpp
whisper-ggml-xplus/models/: README.md  download-ggml-model.cmd
whisper-ggml/eval/: convert_cif_weights.py  generate_ground_truth_timestamps.py  run_ours_param_search.py  run_streaming_comparison.py  test_ctc_alignment.py  visualize_comparison.py
whisper-ggml/examples/: CMakeLists.txt
whisper-ggml/examples/ours_streaming/: ours_streaming.cpp
whisper-ggml/examples/simul_streaming/: simul_streaming.cpp
whisper-ggml/examples/simul_whisper/: simul_whisper.cpp
whisper-ggml/examples/whisper_streaming_cpp/: CMakeLists.txt  whisper_streaming_cpp.cpp
whisper-ggml/examples/whisper_streaming_cpp_optimized/: whisper_streaming_cpp_optimized.cpp
whisper-onnx/: CMakeLists.txt  README.md  whisper_ort.cpp  whisper_ort.h
whisper-onnx-xplus/: .gitignore  KEEP_LIST.md  README.md
whisper-onnx-xplus/compile/: compile_decoder_1step_xplus.py  compile_decoder_nk_full.py  compile_encoder_xplus.py  package_nk_full_deploy.py  qairt_paths.py
whisper-onnx-xplus/compile/qai_hub_models_patch/: README.md
whisper-onnx-xplus/compile/qai_hub_models_patch/modified/: test_nstep.py
whisper-onnx-xplus/deploy_templates/mode3/: README.md  config.json
whisper-onnx-xplus/docs/: NPU_DEPLOY_MODE3_GUIDE.md  VERSION_CONTRACT.md
whisper-onnx-xplus/runtime/whisper-onnx/: CMakeLists.txt  build_ours_streaming_xplus.ps1  whisper_ort.cpp  whisper_ort.h
whisper-onnx-xplus/runtime/whisper-onnx/examples/: CMakeLists.txt
whisper-onnx-xplus/runtime/whisper-onnx/examples/ours_streaming/: ours_streaming.cpp
whisper-onnx-xplus/runtime/whisper-onnx/models/base/: dims.txt
whisper-onnx/eval/: run_streaming_comparison.py  verify_backend_wer.py  verify_mel_vs_model.py
whisper-onnx/examples/: CMakeLists.txt
whisper-onnx/examples/ours_streaming/: ours_streaming.cpp
whisper-onnx/examples/simul_streaming/: CMakeLists.txt  simul_streaming.cpp
whisper-onnx/examples/simul_whisper/: CMakeLists.txt  simul_whisper.cpp
whisper-onnx/examples/verify_cpp/: CMakeLists.txt  verify_cpp.cpp
whisper-onnx/examples/whisper_streaming/: CMakeLists.txt
whisper-onnx/models/: export_whisper_onnx.py
